--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1>Bai tap luyen vong lap</h1>
         <div class="baitap">
             <!-- // -->
-            <h4>1. dem so duong</h4>
+            <h4>Them so vao mang</h4>
             <div class="mb-3">
                 <label for="" class="form-label"></label>
                 <input type="text" class="form-control" name="" id="nhapSo" aria-describedby="helpId" placeholder="">
@@ -27,12 +27,18 @@
             <button onclick="themSoN()">KET QUA</button>
             <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThi"></div>
             <br><br><br>
-            <div class="mb-3">
-                <!-- // -->
-                <h4>2. dem so duong trong mang</h4>
-                <button onclick="demSoDuongTrongMang()">KET QUA</button>
-                <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiDemSoDuong"></div>
-            </div>
+
+            <!-- // -->
+            <h4>1. Tong so duong trong mang</h4>
+            <button onclick="tongSoDuong()">KET QUA</button>
+            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienTHiTongCuaSoDuongTrongMang"></div>
+
+            <br><br><br>
+            <!-- // -->
+            <h4>2. dem so duong trong mang</h4>
+            <button onclick="demSoDuongTrongMang()">KET QUA</button>
+            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiDemSoDuong"></div>
+
             <br><br><br>
             <!-- // -->
             <h4>3. tim so nho nhat trong mang</h4>
@@ -50,12 +56,19 @@
             <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiSoChanCuoi"></div>
             <br><br><br>
             <h4>6. Đổi chỗ 2 giá trị trong mảng theo vị trí (Cho nhập vào 2 vị trí muốn đổi chỗ giá trị).</h4>
+            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiMang"></div>
             <div class="mb-3">
-                <label for="" class="form-label"> </label>
-                <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                <label for="" class="form-label"></label>
+                <input type="text" class="form-control" name="" id="viTri1" aria-describedby="helpId"
+                    placeholder="nhap vi tri thu nhat">
             </div>
-            <button>KET QUA</button>
-            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThi"></div>
+            <div class="mb-3">
+                <label for="" class="form-label"></label>
+                <input type="text" class="form-control" name="" id="viTri2" aria-describedby="helpId"
+                    placeholder="nhap vi tri thu hai">
+            </div>
+            <button onclick="doiViTri()">KET QUA</button>
+            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiViTri"></div>
             <br><br><br>
             <h4>7. Sắp xếp mảng theo thứ tự tăng dần</h4>
             <button onclick="sapXep()">KET QUA</button>
@@ -68,10 +81,13 @@
             <h4>9. Nhập thêm 1 mảng số thực, tìm xem trong mảng có bao nhiêu số nguyên?</h4>
             <div class="mb-3">
                 <label for="" class="form-label"> </label>
-                <input type="text" class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
+                <input type="text" class="form-control" name="" id="themMangMoi" aria-describedby="helpId"
+                    placeholder="">
+                <button onclick="themMang()">them so thuc</button>
+                <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiMangVuaTHem"></div>
             </div>
-            <button>KET QUA</button>
-            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThi"></div>
+            <button onclick="demSoNguyen()">KET QUA</button>
+            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiSoNguyen"></div>
             <br><br><br>
             <h4>10. So sánh số lượng số dương và số lượng số âm xem số nào nhiều hơn.</h4>
             <button onclick="soSanh()">KET QUA</button>
