--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="sapXepMang"></div>
             <br><br><br>
             <h4>8. Tìm số nguyên tố đầu tiên trong mảng. Nếu mảng không có số nguyên tố thì trả về -1.</h4>
-            <button>KET QUA</button>
-            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThi"></div>
+            <button onclick="timSoNguyenTo()">KET QUA</button>
+            <div class="bg-success bg-opacity-75 p-3 text-white mt-3" id="hienThiSoNguyenToDauTien"></div>
             <br><br><br>
             <h4>9. Nhập thêm 1 mảng số thực, tìm xem trong mảng có bao nhiêu số nguyên?</h4>
             <div class="mb-3">
